force-app/main/default/objects/SalesforceOrder__x/fields/Ord_RonchiCodeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_RonchiCodeC__c</fullName>
    <description>Ord_RonchiCodeC</description>
    <externalDeveloperName>Ord_RonchiCodeC</externalDeveloperName>
    <label>Codice Ronchi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>