force-app/main/default/objects/SalesforceOrder__x/fields/Ord_RonchiSubcatC__c.field-meta.xml
<CustomField>
    <fullName>Ord_RonchiSubcatC__c</fullName>
    <description>Ord_RonchiSubcatC</description>
    <externalDeveloperName>Ord_RonchiSubcatC</externalDeveloperName>
    <label>Ord_RonchiSubcatC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>