force-app/main/default/objects/SalesforceOrder__x/fields/Ord_RowIdSiebelC__c.field-meta.xml
<CustomField>
    <fullName>Ord_RowIdSiebelC__c</fullName>
    <description>Ord_RowIdSiebelC</description>
    <externalDeveloperName>Ord_RowIdSiebelC</externalDeveloperName>
    <label>Ord_RowIdSiebelC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>