force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SaleByC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SaleByC__c</fullName>
    <description>Ord_SaleByC</description>
    <externalDeveloperName>Ord_SaleByC</externalDeveloperName>
    <label>User Vendita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>