force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SalesCompanyC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SalesCompanyC__c</fullName>
    <description>Ord_SalesCompanyC</description>
    <externalDeveloperName>Ord_SalesCompanyC</externalDeveloperName>
    <label>Società di vendita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>