force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SalesforceCustomerId__c.field-meta.xml
<CustomField>
    <fullName>Ord_SalesforceCustomerId__c</fullName>
    <description>Ord_SalesforceCustomerId</description>
    <externalDeveloperName>Ord_SalesforceCustomerId</externalDeveloperName>
    <label>Ord_SalesforceCustomerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>