force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SAPImplantCodeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SAPImplantCodeC__c</fullName>
    <description>Ord_SAPImplantCodeC</description>
    <externalDeveloperName>Ord_SAPImplantCodeC</externalDeveloperName>
    <label>Impianto SAP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>