force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SendCertifiedEmailConsentDateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SendCertifiedEmailConsentDateC__c</fullName>
    <description>Ord_SendCertifiedEmailConsentDateC</description>
    <externalDeveloperName>Ord_SendCertifiedEmailConsentDateC</externalDeveloperName>
    <label>Data consenso E-mail PEC Invio Bolletta</label>
    <type>DateTime</type>
</CustomField>