force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SendRequestDateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SendRequestDateC__c</fullName>
    <description>Ord_SendRequestDateC</description>
    <externalDeveloperName>Ord_SendRequestDateC</externalDeveloperName>
    <label>Data Invio Richiesta</label>
    <type>DateTime</type>
</CustomField>