force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ServicePoint_Name__c.field-meta.xml
<CustomField>
    <fullName>Ord_ServicePoint_Name__c</fullName>
    <description>Ord_ServicePoint_Name</description>
    <externalDeveloperName>Ord_ServicePoint_Name</externalDeveloperName>
    <label>Punto di Fornitura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>