force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ShippingCountryC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ShippingCountryC__c</fullName>
    <description>Ord_ShippingCountryC</description>
    <externalDeveloperName>Ord_ShippingCountryC</externalDeveloperName>
    <label>Stato [Spedizione]</label>
    <length>80</length>
    <type>Text</type>
</CustomField>