force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ShippingPlaceC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ShippingPlaceC__c</fullName>
    <description>Ord_ShippingPlaceC</description>
    <externalDeveloperName>Ord_ShippingPlaceC</externalDeveloperName>
    <label>Località [Spedizione]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>