force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ShippingStreetNumberC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ShippingStreetNumberC__c</fullName>
    <description>Ord_ShippingStreetNumberC</description>
    <externalDeveloperName>Ord_ShippingStreetNumberC</externalDeveloperName>
    <label>Ord_ShippingStreetNumberC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>