force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ShippingStreetNumberExtensionC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ShippingStreetNumberExtensionC__c</fullName>
    <description>Ord_ShippingStreetNumberExtensionC</description>
    <externalDeveloperName>Ord_ShippingStreetNumberExtensionC</externalDeveloperName>
    <label>Ord_ShippingStreetNumberExtensionC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>