force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SignedDateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SignedDateC__c</fullName>
    <description>Ord_SignedDateC</description>
    <externalDeveloperName>Ord_SignedDateC</externalDeveloperName>
    <label>Data Firma</label>
    <type>DateTime</type>
</CustomField>