force-app/main/default/objects/SalesforceOrder__x/fields/Ord_Status__c.field-meta.xml
<CustomField>
    <fullName>Ord_Status__c</fullName>
    <description>Ord_Status</description>
    <externalDeveloperName>Ord_Status</externalDeveloperName>
    <label>Ord_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>