force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SubjectCodeStartDateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SubjectCodeStartDateC__c</fullName>
    <description>Ord_SubjectCodeStartDateC</description>
    <externalDeveloperName>Ord_SubjectCodeStartDateC</externalDeveloperName>
    <label>Data Inizio Codice Destinatario</label>
    <type>DateTime</type>
</CustomField>