force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SubProcessC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SubProcessC__c</fullName>
    <description>Ord_SubProcessC</description>
    <externalDeveloperName>Ord_SubProcessC</externalDeveloperName>
    <label>Ord_SubProcessC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>