force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SupplyAddressFormulaC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SupplyAddressFormulaC__c</fullName>
    <description>Ord_SupplyAddressFormulaC</description>
    <externalDeveloperName>Ord_SupplyAddressFormulaC</externalDeveloperName>
    <label>Ord_SupplyAddressFormulaC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>