force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SupplyTypeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SupplyTypeC__c</fullName>
    <description>Ord_SupplyTypeC</description>
    <externalDeveloperName>Ord_SupplyTypeC</externalDeveloperName>
    <label>Tipologia Fornitura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>