force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SurfaceC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SurfaceC__c</fullName>
    <description>Ord_SurfaceC</description>
    <externalDeveloperName>Ord_SurfaceC</externalDeveloperName>
    <label>Superficie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>