force-app/main/default/objects/SalesforceOrder__x/fields/Ord_SwitchOutDateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_SwitchOutDateC__c</fullName>
    <description>Ord_SwitchOutDateC</description>
    <externalDeveloperName>Ord_SwitchOutDateC</externalDeveloperName>
    <label>Data Decorrenza Swith out</label>
    <type>DateTime</type>
</CustomField>