force-app/main/default/objects/SalesforceOrder__x/fields/Ord_TaxRateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_TaxRateC__c</fullName>
    <description>Ord_TaxRateC</description>
    <externalDeveloperName>Ord_TaxRateC</externalDeveloperName>
    <label>Aliquota Iva</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>