force-app/main/default/objects/SalesforceOrder__x/fields/Ord_TraderWithdrawalDateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_TraderWithdrawalDateC__c</fullName>
    <description>Ord_TraderWithdrawalDateC</description>
    <externalDeveloperName>Ord_TraderWithdrawalDateC</externalDeveloperName>
    <label>Data richiesta recesso altro trader</label>
    <type>DateTime</type>
</CustomField>