force-app/main/default/objects/SalesforceOrder__x/fields/Ord_TypeOperationC__c.field-meta.xml
<CustomField>
    <fullName>Ord_TypeOperationC__c</fullName>
    <description>Ord_TypeOperationC</description>
    <externalDeveloperName>Ord_TypeOperationC</externalDeveloperName>
    <label>Ord_TypeOperationC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>