force-app/main/default/objects/SalesforceOrder__x/fields/Ord_ValidityDateEstimateC__c.field-meta.xml
<CustomField>
    <fullName>Ord_ValidityDateEstimateC__c</fullName>
    <description>Ord_ValidityDateEstimateC</description>
    <externalDeveloperName>Ord_ValidityDateEstimateC</externalDeveloperName>
    <label>Data Validita Preventivo</label>
    <type>DateTime</type>
</CustomField>