force-app/main/default/objects/SalesforceOrder__x/fields/Ord_VASBillingModeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_VASBillingModeC__c</fullName>
    <description>Ord_VASBillingModeC</description>
    <externalDeveloperName>Ord_VASBillingModeC</externalDeveloperName>
    <label>Modalità di Fatturazione VAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>