force-app/main/default/objects/SalesforceOrder__x/fields/Ord_VASTypeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_VASTypeC__c</fullName>
    <description>Ord_VASTypeC</description>
    <externalDeveloperName>Ord_VASTypeC</externalDeveloperName>
    <label>Tipo VAS</label>
    <length>30</length>
    <type>Text</type>
</CustomField>