force-app/main/default/objects/SalesforceOrder__x/fields/Ord_VATfacilitationFlagC__c.field-meta.xml
<CustomField>
    <fullName>Ord_VATfacilitationFlagC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ord_VATfacilitationFlagC</description>
    <externalDeveloperName>Ord_VATfacilitationFlagC</externalDeveloperName>
    <label>Ord_VATfacilitationFlagC</label>
    <type>Checkbox</type>
</CustomField>