force-app/main/default/objects/SalesforceOrder__x/fields/Ord_VendorFirstNameC__c.field-meta.xml
<CustomField>
    <fullName>Ord_VendorFirstNameC__c</fullName>
    <description>Ord_VendorFirstNameC</description>
    <externalDeveloperName>Ord_VendorFirstNameC</externalDeveloperName>
    <label>Ord_VendorFirstNameC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>