force-app/main/default/objects/SalesforceOrder__x/fields/Ord_VendorLastNameC__c.field-meta.xml
<CustomField>
    <fullName>Ord_VendorLastNameC__c</fullName>
    <description>Ord_VendorLastNameC</description>
    <externalDeveloperName>Ord_VendorLastNameC</externalDeveloperName>
    <label>Cognome Venditore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>