force-app/main/default/objects/SalesforceOrder__x/fields/Ord_VolturaThirdTraderC__c.field-meta.xml
<CustomField>
    <fullName>Ord_VolturaThirdTraderC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ord_VolturaThirdTraderC</description>
    <externalDeveloperName>Ord_VolturaThirdTraderC</externalDeveloperName>
    <label>Ord_VolturaThirdTraderC</label>
    <type>Checkbox</type>
</CustomField>