force-app/main/default/objects/SalesforceOrder__x/fields/Ord_VoltureTypeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_VoltureTypeC__c</fullName>
    <description>Ord_VoltureTypeC</description>
    <externalDeveloperName>Ord_VoltureTypeC</externalDeveloperName>
    <label>Ord_VoltureTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>