force-app/main/default/objects/SalesforceOrder__x/fields/Ord_WaiverRightAfterthoughtC__c.field-meta.xml
<CustomField>
    <fullName>Ord_WaiverRightAfterthoughtC__c</fullName>
    <description>Ord_WaiverRightAfterthoughtC</description>
    <externalDeveloperName>Ord_WaiverRightAfterthoughtC</externalDeveloperName>
    <label>Rinuncia Diritto di Ripensamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>