force-app/main/default/objects/SalesforceOrder__x/fields/Ord_XMLTypeC__c.field-meta.xml
<CustomField>
    <fullName>Ord_XMLTypeC__c</fullName>
    <description>Ord_XMLTypeC</description>
    <externalDeveloperName>Ord_XMLTypeC</externalDeveloperName>
    <label>Tipo invio fattura XML</label>
    <length>255</length>
    <type>Text</type>
</CustomField>